# Boring-Financial

./: .dockerignore  .gitignore  README.md  category_map.csv  generate_report.py  merge_bills.py  oneclick_bills.spec
backend/: .env.bare.example  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: README.md
backend/src/backend/: cli.py  main.py
backend/src/backend/api/: dependencies.py  router.py  routes_auth.py  routes_categories.py  routes_classification.py  routes_dashboard.py  routes_imports.py  routes_personality.py  routes_reports.py  routes_transactions.py
backend/src/backend/core/: celery_app.py  config.py  security.py
backend/src/backend/db/: base.py  runtime_schema.py  session.py
backend/src/backend/models/: __init__.py  entities.py
backend/src/backend/schemas/: auth.py  categories.py  imports.py  personality.py  reports.py  transactions.py
backend/src/backend/services/: analytics.py  auth.py  bootstrap.py  classifiers.py  imports.py  parsers.py  personality.py  reports.py  retry_queue.py
backend/src/backend/tasks/: classification_tasks.py  import_tasks.py  report_tasks.py
backend/src/backend/utils/: normalizers.py
backend/tests/: conftest.py  helpers.py  test_analytics.py  test_api_auth.py  test_api_imports_dashboard_reports.py  test_api_transactions.py  test_classifiers.py  test_imports.py  test_normalizers.py  test_parsers.py  test_personality.py  test_reliability_metrics.py  test_reports.py  test_retry_queue.py  test_security.py
docs/: api.md  (+10 more)
(+49 files in other folders)
